--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>The Game of Life!</h1>
 		</header>
 			<section id="content">
 				<canvas id="GameOfLife" data-processing-sources="GameOfLife.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Pressed 'a' to pause simulation
 	    </footer>
 	</body>
 </html>
